@@ -3,6 +3,8 @@
     01.增加 @IgnoreParam注解，用于Form表单注入忽略。
 * 修复:
     02.修复BeanUtils在获取所有字段、所有方法时无法获取到父类中数据的问题。
+* 改进:
+    03.Validation验证类传入的参数改为泛型，ValidationCallInterceptor增加了对泛型判断的逻辑。
 
 ===== Hasor-Core v1.1.0
 * 新增:
